--- a/freelec-spring/build.gradle
+++ b/freelec-spring/build.gradle
@@ -22,7 +22,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'junit:junit:4.13.1'
-    implementation 'com.h2database:h2'
+//    implementation 'com.h2database:h2'
+    runtimeOnly 'com.h2database:h2:1.4.197'
     implementation 'org.springframework.boot:spring-boot-starter-mustache'
     implementation 'junit:junit:4.13.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
